--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/FamiliarFormBasic.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/FamiliarFormBasic.zul
@@ -1,7 +1,7 @@
-<?component name="uploadImageSingle" macroURI="/assets/theme/components/upload_image_single.zul"?>
+
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
-			<div class="row">
+		<div class="row">
 			<div sclass="col s12 form">
 
 				<tabbox id="tb" class="rtab ltab">
@@ -21,51 +21,49 @@
 									Tipo de persona
 								</n:label>
 
-								<combobox disabled="true"  id="tipo_persona"
-									readonly="true" model="@bind(vm.tipoPersonaEnums)"
+								<combobox disabled="true"
+									id="tipo_persona" readonly="true"
+									model="@bind(vm.tipoPersonaEnums)"
 									selectedItem="@bind(vm.tipoPersonaEnum)">
 									<template name="model">
 										<comboitem label="@load(each)" />
 									</template>
 								</combobox>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_persona, position=after_end" />
+							
 							</div>
 
 							<div
 								visible="@load(empty vm.tipoPersonaEnum || vm.tipoPersonaEnum eq 'NATURAL' )">
 								<div class="input-field col s6">
-									<n:label class="active" for="identificacion">
+									<n:label class="active"
+										for="identificacion">
 										Cédula
 									</n:label>
 
-									<textbox disabled="true" id="identificacion"
-										type="text" value="@bind(vm.persona.identificacion)">
+									<textbox disabled="true"
+										id="identificacion" type="text"
+										value="@bind(vm.persona.identificacion)">
 									</textbox>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_identificacion, position=after_end" />
+									
 								</div>
 								<div class="input-field col s6">
-									<n:label class="active" for="nombre">
+									<n:label class="active"
+										for="nombre">
 										Nombre
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_nombre, position=after_end" />
-									<textbox disabled="true" id="nombre" type="text"
-										value="@bind(vm.persona.nombre)">
+									
+									<textbox disabled="true" id="nombre"
+										type="text" value="@bind(vm.persona.nombre)">
 									</textbox>
 								</div>
 								<div class="input-field col s6">
-									<n:label class="active" for="apellido">
+									<n:label class="active"
+										for="apellido">
 										Apellido
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_apellido, position=after_end" />
-									<textbox disabled="true" id="apellido" type="text"
+									
+									<textbox disabled="true"
+										id="apellido" type="text"
 										value="@bind(vm.persona.apellido)">
 									</textbox>
 								</div>
@@ -74,11 +72,9 @@
 										class="active">
 										Sexo
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_sexo, position=after_end" />
-									<combobox disabled="true" id="sexo" readonly="true"
-										model="@bind(vm.sexoEnums)"
+									
+									<combobox disabled="true" id="sexo"
+										readonly="true" model="@bind(vm.sexoEnums)"
 										selectedItem="@bind(vm.sexoEnum)">
 										<template name="model"
 											var="sexo">
@@ -93,11 +89,9 @@
 										class="active">
 										Fecha de nacimiento
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_fecha_nacimiento, position=after_end" />
-									<datebox disabled="true" id="db" cols="20"
-										readonly="true" format="dd/MM/yyyy"
+									
+									<datebox disabled="true" id="db"
+										cols="20" readonly="true" format="dd/MM/yyyy"
 										value="@bind(vm.fechaNacimiento)" />
 								</div>
 							</div>
@@ -105,28 +99,28 @@
 							<div
 								visible="@load(not empty (vm.tipoPersonaEnum) and vm.tipoPersonaEnum eq 'JURIDICA')">
 								<div class="input-field col s6">
-									<n:label class="active" for="identificacionRif">
+									<n:label class="active"
+										for="identificacionRif">
 										RIF
 									</n:label>
-									<textbox disabled="true" id="identificacionRif"
-										type="text" value="@bind(vm.persona.identificacion)">
+									<textbox disabled="true"
+										id="identificacionRif" type="text"
+										value="@bind(vm.persona.identificacion)">
 									</textbox>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_identificacion_rif, position=after_end" />
+								
 								</div>
 								<div class="input-field col s12">
-									<n:label class="active" for="nombreJuridico">
+									<n:label class="active"
+										for="nombreJuridico">
 										Nombre
 									</n:label>
 
-									<textbox disabled="true" id="nombreJuridico"
-										type="text" value="@bind(vm.persona.nombre)">
+									<textbox disabled="true"
+										id="nombreJuridico" type="text"
+										value="@bind(vm.persona.nombre)">
 
 									</textbox>
-									<span style="left:99%"
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_nombre, position=after_end" />
+								
 								</div>
 							</div>
 
@@ -135,13 +129,11 @@
 									for="fk_estado">
 									Estado
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_estado, position=after_end" />
-								<combobox disabled="true" id="fk_estado" readonly="true"
-									placeholder="Seleccione un Estado" instant="true"
-									onSelect="@command('changeEstado')" model="@bind(vm.estados)"
-									selectedItem="@bind(vm.estado)">
+							
+								<combobox disabled="true" id="fk_estado"
+									readonly="true" placeholder="Seleccione un Estado"
+									instant="true" onSelect="@command('changeEstado')"
+									model="@bind(vm.estados)" selectedItem="@bind(vm.estado)">
 									<template name="model">
 										<comboitem
 											label="@load(each.nombre)" />
@@ -157,9 +149,10 @@
 								<span
 									sclass="fa fa-question-circle fa-lg help-icon-special"
 									tooltip="pop_ciudad, position=after_end" />
-								<combobox  id="fk_ciudad" readonly="true"
+								<combobox id="fk_ciudad" readonly="true"
 									placeholder="Seleccione una ciudad"
-									disabled="@load(not empty vm.ciudades)" model="@bind(vm.ciudades)"
+									disabled="@load(not empty vm.ciudades)"
+									model="@bind(vm.ciudades)"
 									selectedItem="@bind(vm.persona
 									.fkCiudad)">
 									<template name="model">
@@ -176,34 +169,22 @@
 										class="active">
 										Fecha de ingreso
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_fecha_ingreso, position=after_end" />
-									<datebox disabled="true" id="fecha_ingreso"
-										cols="20" format="dd/MM/yyyy" readonly="true"
-										value="@bind(vm.fechaIngreso)" />
+								
+									<datebox disabled="true"
+										id="fecha_ingreso" cols="20" format="dd/MM/yyyy"
+										readonly="true" value="@bind(vm.fechaIngreso)" />
 								</div>
 
 								<div class="input-field col s12">
-									<n:label class="active" for="direccion">
+									<n:label class="active"
+										for="direccion">
 										Dirección
 									</n:label>
-									<span
-										sclass="fa fa-question-circle fa-lg help-icon-special"
-										tooltip="pop_direccion, position=after_end" />
-									<textbox disabled="true" id="direccion" type="text"
-										sclass="materialize-textarea" multiline="true"
-										value="@bind(vm.persona.direccion)">
+									
+									<textbox disabled="true"
+										id="direccion" type="text" sclass="materialize-textarea"
+										multiline="true" value="@bind(vm.persona.direccion)">
 									</textbox>
-								</div>
-							</div>
-							<div class="col s6" style="padding:0px;">
-								<div class="input-field col s12">
-									<span style="float:right"
-										sclass="fa fa-question-circle fa-lg help-icon"
-										tooltip="pop_imagen, position=after_end" />
-									<uploadImageSingle disabled="true" maxsize="9000"
-										size="200" idUpload="1" title="Imagen del Beneficiario" />
 								</div>
 							</div>
 
@@ -212,36 +193,34 @@
 						<tabpanel>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="telefono_1">
+								<n:label class="active"
+									for="telefono_1">
 									Teléfono 1
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_telefono1, position=after_end" />
-								<textbox disabled="true" id="telefono_1" type="text"
-									value="@bind(vm.persona.telefono1)">
+								
+								<textbox disabled="true" id="telefono_1"
+									type="text" value="@bind(vm.persona.telefono1)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="telefono_2">
+								<n:label class="active"
+									for="telefono_2">
 									Teléfono 2
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_telefono2, position=after_end" />
-								<textbox disabled="true" id="telefono_2" type="text"
-									value="@bind(vm.persona.telefono2)">
+								
+								<textbox disabled="true" id="telefono_2"
+									type="text" value="@bind(vm.persona.telefono2)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="fax">Fax</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_fax, position=after_end" />
-								<textbox disabled="true" id="fax" type="text"
-									value="@bind(vm.persona.fax)">
+								<n:label class="active" for="fax">
+									Fax
+								</n:label>
+								
+								<textbox disabled="true" id="fax"
+									type="text" value="@bind(vm.persona.fax)">
 								</textbox>
 							</div>
 
@@ -249,69 +228,63 @@
 								<n:label class="active" for="correo">
 									Correo electrónico
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_correo, position=after_end" />
-								<textbox disabled="true"  id="correo" type="text"
-									value="@bind(vm.persona.correo)">
+							
+								<textbox disabled="true" id="correo"
+									type="text" value="@bind(vm.persona.correo)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="twitter">Twitter</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_twitter, position=after_end" />
-								<textbox disabled="true" id="twitter" type="text"
-									value="@bind(vm.persona.twitter)">
+								<n:label class="active" for="twitter">
+									Twitter
+								</n:label>
+								
+								<textbox disabled="true" id="twitter"
+									type="text" value="@bind(vm.persona.twitter)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="instagram">
+								<n:label class="active"
+									for="instagram">
 									Instagram
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_instagram, position=after_end" />
-								<textbox disabled="true" id="instagram" type="text"
-									value="@bind(vm.persona.instagram)">
+								
+								<textbox disabled="true" id="instagram"
+									type="text" value="@bind(vm.persona.instagram)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="facebook">
+								<n:label class="active"
+									for="facebook">
 									Facebook
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_facebook, position=after_end" />
-								<textbox disabled="true" id="facebook" type="text"
-									value="@bind(vm.persona.facebook)">
+							
+								<textbox disabled="true" id="facebook"
+									type="text" value="@bind(vm.persona.facebook)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="linkedin">
+								<n:label class="active"
+									for="linkedin">
 									LinkedIn
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_linkedin, position=after_end" />
-								<textbox disabled="true" id="linkedin" type="text"
-									value="@bind(vm.persona.linkedin)">
+							
+								<textbox disabled="true" id="linkedin"
+									type="text" value="@bind(vm.persona.linkedin)">
 								</textbox>
 							</div>
 
 							<div class="input-field col s6">
-								<n:label class="active" for="sitioWeb">
+								<n:label class="active"
+									for="sitioWeb">
 									Sitio web
 								</n:label>
-								<span
-									sclass="fa fa-question-circle fa-lg help-icon-special"
-									tooltip="pop_web, position=after_end" />
-								<textbox disabled="true" id="sitioWeb" type="text"
-									value="@bind(vm.persona.sitioWeb)">
+								
+								<textbox disabled="true" id="sitioWeb"
+									type="text" value="@bind(vm.persona.sitioWeb)">
 								</textbox>
 							</div>
 
