--- a/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
+++ b/WebContent/views/desktop/gestion/ayudas/egresoFamiliar/selectFamiliar.zul
@@ -1,43 +1,43 @@
- <?xel-method prefix="m" name="convertirLongATimestamp" class="lights.smile.util.UtilConverterDataList" 
-	signature="java.lang.String convertirLongATimestamp(java.lang.Long)" ?> 
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
 		<div class="row">
 			<div class="col s12" align="center"
 				style="margin-bottom: 15px;">
-				<label value="Seleccione el Familiar"
+				<label value="Seleccione el Representante"
 					sclass="label-medium-500">
 				</label>
 			</div>
 
 		</div>
-		<div width="100%">
-
-			<div style="overflow: auto;" class="row">
-			<div class="col s12">
-				<div class="col s12" style="overflow: scroll;">
+		<div>
+			<div class="row">
+				<div class="col s12">
+					<div class="col s12">
 						<listbox id="listbox"
 							model="@load(vm.objectsList)"
 							selectedItem="@bind(vm.selectedObject)">
-
-
-							<listhead sizable="true">
-					
-							<listheader width="250px" label="Nombre de Representante" />
-							<listheader width="250px" label="Identificacion" />
-							<listheader width="250px" label="Telefono" />
-							<listheader width="250px" label="Correo" />
-							
-						
+							<listhead>
+								<listheader width="10%"
+									label="Identificación" />
+								<listheader width="30%"
+									label="Representante" />
+								<listheader width="30%"
+									label="Teléfono" />
+								<listheader width="30%" label="Correo" />
 							</listhead>
 							<template name="model">
 								<listitem>
-								
-								<listcell label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
-								<listcell label="@load(each.fkPersona.identificacion)" />
-								<listcell label="@load(each.fkPersona.telefono1)" />
-								<listcell label="@load(each.fkPersona.correo)" />
-									
+									<listcell
+										label="@load(each.fkPersona.identificacion)" />
+									<listcell
+										label="@load(each.fkPersona.nombre.concat(' ').concat(each.fkPersona.apellido))" />
+
+									<listcell
+										label="@load(each.fkPersona.telefono1)" />
+									<listcell
+										label="@load(each.fkPersona.correo)" />
 								</listitem>
 							</template>
 							<listfoot>
