--- a/WebContent/views/desktop/reportes/reconocimiento/ReporteReconocimientoIndex.zul
+++ b/WebContent/views/desktop/reportes/reconocimiento/ReporteReconocimientoIndex.zul
@@ -1,16 +1,19 @@
 <zk xmlns:n="native" xmlns:w="client">
-	<div class="wizard ${arg.animation_}"
+	<div class="wizard ${arg.animation_} "
 		use="karen.core.wizard.controllers.C_WindowWizard"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.gestion.ayudas.egreso_beneficiario.VM_EgresoBeneficiarioIndex')">
+		viewModel="@id('vm') @init('ve.smile.reportes.reconocimiento.viewmodels.VM_ReporteReconocimientoIndex')">
 		<div class="row">
 			<div id="ulHeaderWizard"
 				use="karen.core.wizard.buttons.containers.UlHeaderWizard">
 			</div>
+
 			<div sclass="col s12">
 				<include id="include"></include>
 			</div>
+
 		</div>
+
 		<div class="row">
 			<div class="col s6 offset-s3" align="center">
 				<div id="divButtonsWizard" sclass="row"
