--- a/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPadrino.zul
@@ -15,7 +15,7 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox model="@load(vm.padrinos)"
+						<listbox model="@load(vm.padrinos)"  height="200px"
 							emptyMessage="No hay padrinos para mostrar"
 							selectedItem="@bind(vm.padrino)">
 
