--- a/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
+++ b/WebContent/views/desktop/gestion/donativo/registro/selectPatrocinador.zul
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col s12">
 					<div class="col s12">
-						<listbox model="@load(vm.patrocinadores)"
+						<listbox model="@load(vm.patrocinadores)"  height="300px"
 							emptyMessage="No hay Patrocinadores a mostrar"
 							selectedItem="@bind(vm.patrocinador)">
 							<listhead sizable="true">
